# diffsync-cpp

./: CMakeLists.txt  Jenkinsfile  conanfile.txt  readme.md
inc/: AsyncHasher.h  Delta.h  DiffSync.h  Files.h  Hashes.h  Protocol.h
protos/: block_hash.proto  delta.proto
src/: AsyncHasher.cpp  Delta.cpp  Files.cpp  Hashes.cpp  Protocols.cpp  main.cpp
test/: AsyncHasher_test.cpp  CMakeLists.txt  Delta_test.cpp  Files_test.cpp  Hashes_test.cpp
test/testdata/: 1k_binary_blob
